# c_triangle

./: .env.cmake  .gitignore  CMakeLists.txt  clean_commands.lua  compile_commands.json  main.c  main.cpp  run.lua  run.sh  shader.lua
shaders/: simple_shader.frag
src/: CMakeLists.txt  Engine.c  Engine.h  EngineCommons.h  ExternalLibs.h  HelloTrianngleApplication.cpp  HelloTrianngleApplication.h  Window.c  Window.h  application.c  application.h  context.c  context.h  errors.h  headers.h  lve_pipeline.c  lve_pipeline.h  main.c  toolkit.h  tools.c  tools.h
src/context/: context.c  context.h
src/render/: renderer.c  renderer.h
src/utils/: utils.c  utils.h
src/window/: window.c  window.h
